tests/chainsaw/restrict-seccomp-strict/bad-pod-unconfined.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod-seccomp-strict-unconfined
spec:
  containers:
  - name: container01
    image: busybox:1.35
    args:
    - sleep
    - 1d
    securityContext:
      seccompProfile:
        type: Unconfined
