tests/chainsaw/restrict-seccomp-strict/good-pod-container-level.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod-seccomp-strict-container
spec:
  containers:
  - name: container01
    image: busybox:1.35
    args:
    - sleep
    - 1d
    securityContext:
      allowPrivilegeEscalation: false
      runAsNonRoot: true
      seccompProfile:
        type: RuntimeDefault
      capabilities:
        drop:
        - ALL
