tests/chainsaw/restrict-seccomp-strict/good-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod-seccomp-strict
spec:
  securityContext:
    seccompProfile:
      type: RuntimeDefault
  containers:
  - name: container01
    image: busybox:1.35
    args:
    - sleep
    - 1d
    securityContext:
      allowPrivilegeEscalation: false
      runAsNonRoot: true
      capabilities:
        drop:
        - ALL
